--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@ img{
 
 
 
-.menu-item{
 
-}
-.menu-item li{}
+
+
+
 .menu-item li a{
     font-size: 18px;
 }
 .carousel-item{
     background: #fceceb;
-    padding: 20px 40px;
+    padding: 80px 40px;
 }
 .carousel-item h1{
     font-size: 50px;
@@ -57,7 +57,83 @@ img{
     font-size: 35px;
     font-weight: 600;
 }
-.item-img img{
+.small-item-img img{
     width: 150px;
     margin-left: 70px;
+} 
+
+
+        /* cetagory section  css*/
+
+.item-sector{
+    padding: 20px 20px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 8px;
+}
+.item-img{
+    text-align: center;
+}
+.item-img img{
+    width: 280px;
+    margin-left: 0;
+}
+.item-contact h2 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-top: 18px;
+    margin-bottom: 20px;
+}
+.item-contact p{
+    font-size: 16px;
+    color: #464646;
+    
+}
+
+        /* contact section css */
+
+.contact-item-section  {
+    background: #fceae8;
+    padding: 50px 20px;
+    border-radius: 8px;
+}
+.design-input{
+    border-radius: 8px;
+    width: 300px;
+    border: none;
+    padding: 8px 20px;
+    outline: none;
+}
+.submit-btn{
+    background: rgb(255, 101, 18);
+    padding: 8px 30px;
+    font-size: 16px;
+    font-weight: 500;
+    outline: none;
+    display: block;
+    margin: auto;
+    border: none;
+    margin-top: 20px;
+    border-radius: 8px;
+    color: #fff;
+}
+
+        /* footer section css */
+footer{
+    background: rgb(28, 18, 18);
+    padding: 10px 0px;
+    margin-bottom: 0;
+}
+footer p{
+    color: #fff;
+    margin-bottom: 0;
+}
+footer span{
+    color: #ffc107;
+    font-size: 20px;
+    font-weight: 600;
+    transition: .5s;
+}
+footer span:hover{
+    letter-spacing: 1px;
+    color: aqua;
 }
